goldilocks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goldilocks-ingress
  namespace: goldilocks
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: goldilocks.hosrasmus.hopto.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: goldilocks-dashboard
            port: 
              name: "http"
  tls:
  - secretName: goldilocksingresssecretname
    hosts:
      - goldilocks.hosrasmus.hopto.org
